# template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TEMPLATE_IMPROVEMENTS.md  _typos.toml  cargo-generate.toml  cliff.toml  deny.toml  rust-toolchain.toml
.github/workflows/: build.yml
src/: lib.rs  main.rs
