[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{author_name}} <{{author_email}}>"]
description = "{{project_description}}"
license = "{{project_license}}"
repository = "{{repository_url}}"
readme = "README.md"
keywords = ["rust", "cli", "template"]
categories = ["command-line-utilities"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "{{project_name}}"
path = "src/lib.rs"

[[bin]]
name = "{{project_name}}"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
# Add development dependencies here if needed
