[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{description}}"
license = "{{license}}"
repository = "{{repository}}"
readme = "README.md"
keywords = ["rust", "cli", "template"]
categories = ["command-line-utilities"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "{{crate_name}}"
path = "src/lib.rs"

[[bin]]
name = "{{crate_name}}"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
# Add development dependencies here if needed
